cabal-version:       2.4

name:                pct-ls
version:             0.1.0.0
synopsis:            Get percentage of file extensions in a directory
license:             MIT
license-file:        LICENSE
author:              erickcan
maintainer:          79339358+erickcan@users.noreply.github.com
copyright:           (c) 2021 erickcan
category:            System
extra-source-files:  CHANGELOG.md

source-repository head
  type:              git
  location:          git://github.com/erickcan/pct-ls.git

executable pct-ls
  main-is:            Main.hs
  build-depends:
    base ^>=4.14.1.0,
    filepath ^>=1.4.2.1,
    directory ^>=1.3.6.0
  hs-source-dirs:     app
  default-language:   Haskell2010
